# Zorah

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
scripts/: set-version.mjs
src/: App.tsx
src-tauri/: .env.example  Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: commands.rs  crypto.rs  google.rs  lib.rs  main.rs  vault.rs
src/components/: AppVersion.tsx  CredentialCard.tsx  CredentialFormModal.tsx  ImportFromDriveModal.tsx  LoginScreen.tsx  SearchBar.tsx  SettingsModal.tsx  Toast.tsx  VaultScreen.tsx  ZorahLogo.tsx  icons.tsx
src/hooks/: useVault.ts
src/styles/: global.css
src/types/: vault.ts
