[package]
name = "zorah"
version = "0.1.0"
description = "Zorah Password Manager"
authors = []
edition = "2021"

[lib]
name = "zorah_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
